# apify-sdk-python

./: .editorconfig  .flake8  .gitignore  .isort.cfg  .lycheeignore  .markdownlint.yaml  .pre-commit-config.yaml  .rules.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  data.json  mypy.ini  package-lock.json  pydoc-markdown.yml  pyproject.toml  pytest.ini  renovate.json  setup.py  typos.toml
.actor/: actor.json  input_schema.json
.github/actions/pnpm-install/: action.yml
.github/workflows/: _changelog_entry_check.yaml  _check_changelog_entry.yaml  _check_code.yaml  _check_package.yaml  _check_version_conflict.yaml  _checks.yaml  _integration_tests.yaml  _linting.yaml  _publish_to_pypi.yaml  _release_docs.yaml  _release_pre.yaml  _tests.yaml  _type_checking.yaml  _unit_tests.yaml  _version_conflict_check.yaml  build_and_deploy_docs.yaml  check_docs.yaml  check_version_availability.yaml  code_checks.yaml  docs.yaml  docs.yml  integration_tests.yaml  lint_and_test.yaml  lint_and_type_checks.yaml  lychee.yml  manual_release_beta.yaml  manual_release_docs.yaml  manual_release_stable.yaml  manual_version_docs.yaml  on_master.yaml  on_pull_request.yaml  on_schedule_lychee.yaml  pr_toolkit.yaml  pr_toolkit.yml  pre_release.yaml  release.yaml  release.yml  run_checks.yaml  run_code_checks.yaml  run_release.yaml  (+2 more)
docs/: docs.md
docs/01-overview/: 01-introduction.mdx  02-running-locally.mdx  03-structure.mdx
docs/01_introduction/: index.mdx  installation.mdx  quick-start.mdx
docs/01_overview/: 01_introduction.mdx  02_running_actors_locally.mdx  03_actor_structure.mdx  index.mdx  overview.mdx
docs/01_overview/code/: 01_introduction.py
docs/02-guides/: 01-requests-and-httpx.mdx  02-beautiful-soup.mdx  03-playwright.mdx  04-selenium.mdx  05-scrapy.mdx
docs/02_concepts/: 01_actor_lifecycle.mdx  02_actor_input.mdx  03_storages.mdx  04_actor_events.mdx  05_proxy_management.mdx  06_interacting_with_other_actors.mdx  07_webhooks.mdx  08_access_apify_api.mdx  09_logging.mdx  09_running_webserver.mdx  10_configuration.mdx  10_logging.mdx  11_configuration.mdx  11_pay_per_event.mdx  12_pay_per_event.mdx  12_storage_clients.mdx  13_exceptions.mdx
docs/02_concepts/code/: 01_class_manual.py  01_error_handling_manual.py  (+44 more)
docs/02_guides/: 01_beautifulsoup_httpx.mdx  02_crawlee.mdx  03_playwright.mdx  04_selenium.mdx  05_scrapy.mdx  pay_per_event.mdx
docs/03-concepts/: 01-actor-lifecycle.mdx  02-actor-input.mdx  03-storages.mdx  04-actor-events.mdx  05-proxy-management.mdx  06-interacting-with-other-actors.mdx  07-webhooks.mdx  08-access-apify-api.mdx  09-running-webserver.mdx  10-logging.mdx  11-configuration.mdx
docs/03_concepts/: 01_actor_lifecycle.mdx  02_actor_input.mdx  03_storages.mdx  04_actor_events.mdx  06_interacting_with_other_actors.mdx  07_webhooks.mdx  08_access_apify_api.mdx  09_running_webserver.mdx  10_logging.mdx  11_configuration.mdx  12_pay_per_event.mdx
docs/03_guides/: 01_beautifulsoup_httpx.mdx  02_crawlee.mdx  02_parsel_impit.mdx  03_playwright.mdx  04_selenium.mdx  05_crawlee.mdx  06_scrapy.mdx  07_ai_agents.mdx  07_running_webserver.mdx  07_scrapling.mdx  08_crawl4ai.mdx  08_uv.mdx  09_browser_use.mdx  09_scrapling.mdx  10_crawl4ai.mdx  10_pydantic.mdx  10_uv.mdx  11_pydantic.mdx  12_running_webserver.mdx  13_ai_agents.mdx  13_mcp_servers.mdx  14_ai_agents.mdx  14_mcp_servers.mdx
docs/03_guides/code/uv_project/: pyproject.toml
docs/04-upgrading/: upgrading_to_v2.md  upgrading_to_v20.md
docs/04_upgrading/: upgrading_to_v2.md  upgrading_to_v3.md  upgrading_to_v4.md
docs/examples/: index.md
docs/guides/: index.md
docs/res/: build.sh  check.sh  format_docs.py  intro.md
scripts/: check_version_availability.py  check_version_in_changelog.py  print_current_package_version.py  update_version_for_prerelease.py  utils.py
src/: __main__.py  main.py  settings.py
src/apify/: __init__.py  _actor.py  _actor_inputs.py  _charging.py  _configuration.py  _consts.py  _crypto.py  _models.py  _platform_event_manager.py  _proxy_configuration.py  _types.py  _utils.py  _webhook.py  actor.py  config.py  consts.py  errors.py  event_manager.py  log.py  proxy_configuration.py  storage_client_manager.py
src/spiders/: __init__.py  title.py
tests/: _utils.py
tests/e2e/: README.md  conftest.py  test_actor_api_helpers.py  test_actor_call_timeouts.py  test_actor_charge.py  test_actor_create_proxy_configuration.py  test_actor_dataset.py  test_actor_events.py  test_actor_key_value_store.py  test_actor_lifecycle.py  test_actor_log.py  test_actor_request_queue.py  test_actor_scrapy.py  test_apify_storages.py  test_crawlers_with_storages.py  test_fixtures.py
tests/integration/: README.md  _fix_pytest.py  _utils.py  conftest.py  test_actor_api_helpers.py  test_actor_call.py  test_actor_call_timeouts.py  test_actor_charge.py  test_actor_create_proxy_configuration.py  test_actor_dataset.py  test_actor_events.py  test_actor_key_value_store.py  test_actor_lifecycle.py  test_actor_log.py  test_actor_migration.py  test_actor_request_queue.py  test_actor_scrapy.py  test_actor_scrapy_basic.py  test_apify_storages.py  test_crawlee.py  test_crawlers_with_storages.py  test_dataset.py  test_fixtures.py  test_key_value_store.py  test_request_queue.py  test_scrapy_actor.py  test_storages.py
tests/unit/: README.md  conftest.py  server.py  test_apify_storages.py  test_config.py  test_consts.py  test_crypto.py  test_errors.py  test_event_manager.py  test_log.py  test_lru_cache.py  test_models.py  test_platform_event_manager.py  test_proxy_configuration.py  test_utils.py
website/: .eslintrc.json  .gitignore  build_api_reference.sh  docusaurus.config.js  generate_module_shortcuts.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pydoc-markdown.yml  sidebars.js  transformDocs.js  versions.json
website/patches/: docusaurus-plugin-typedoc-api+2.5.1.patch
website/roa-loader/: index.js
website/versioned_sidebars/: version-0.2-sidebars.json  version-1.7-sidebars.json  version-2.7-sidebars.json  version-3.3-sidebars.json  version-3.4-sidebars.json
(+557 files in other folders)
