[project]
name = "apify"
version = "2.0.0"
description = "Apify SDK for Python"
readme = "README.md"
license = { text = "Apache Software License" }
authors = [{ name = "Apify Technologies s.r.o.", email = "support@apify.com" }]
keywords = ["apify", "sdk", "actor", "scraping", "automation"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

requires-python = ">=3.9"

# We use inclusive ordered comparison clause for non-Apify packages intentionally in order to enhance the Apify SDK's
# compatibility with a wide range of external packages. This decision was discussed in detail in the following PR:
# https://github.com/apify/apify-sdk-python/pull/154
dependencies = [
    "apify-client ~= 1.7.1",
    "apify-shared ~= 1.1.2",
    "aiofiles >= 22.1.0",
    "aioshutil >= 1.0",
    "colorama >= 0.4.6",
    "crawlee >= 0.3.0",
    "cryptography >= 39.0.0",
    "httpx >= 0.24.0",
    "lazy-object-proxy >= 1.10.0",
    "psutil >= 5.9.0",
    "pyee >= 11.0.0",
    "sortedcollections >= 2.0.0",
    "typing-extensions >= 4.1.0",
    "websockets >= 10.1",
]

[project.optional-dependencies]
dev = [
    "build ~= 1.2.0",
    "filelock ~= 3.15.0",
    "mypy ~= 1.10.0",
    "pre-commit ~= 3.5.0",
    "pydoc-markdown ~= 4.8.0",
    "pytest ~= 8.2.0",
    "pytest-asyncio ~= 0.23.0",
    "pytest-cov ~= 5.0.0",
    "pytest-only ~= 2.1.0",
    "pytest-timeout ~= 2.3.0",
    "pytest-xdist ~= 3.6.0",
    "respx ~= 0.21.0",
    "ruff ~= 0.5.0",
    "setuptools ~= 70.3.0",  # setuptools are used by pytest, but not explicitly required
    "twine ~= 5.1.0",
    "types-aiofiles ~= 24.1.0.20240626",
    "types-colorama ~= 0.4.15.20240311",
    "types-psutil ~= 6.0.0.20240621",
]
scrapy = [
    "scrapy >= 2.11.0",
]

[project.urls]
"Homepage" = "https://docs.apify.com/sdk/python/"
"Documentation" = "https://docs.apify.com/sdk/python/"
"Source" = "https://github.com/apify/apify-sdk-python"
"Issue tracker" = "https://github.com/apify/apify-sdk-python/issues"
"Changelog" = "https://github.com/apify/apify-sdk-python/blob/master/CHANGELOG.md"
"Apify Homepage" = "https://apify.com"

[build-system]
requires = ["setuptools ~= 70.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["apify*"]

[tool.setuptools.package-data]
apify = ["py.typed"]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A002",    # Argument is shadowing a Python builtin
    "ANN101",  # Missing type annotation for `self` in method
    "ANN102",  # Missing type annotation for `cls` in method
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {filename}
    "BLE001",  # Do not catch blind exception
    "C901",    # `{name}` is too complex
    "COM812",  # This rule may cause conflicts when used with the formatter
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in `__init__`
    "EM",      # flake8-errmsg
    "G004",    # Logging statement uses f-string
    "ISC001",  # This rule may cause conflicts when used with the formatter
    "FIX",     # flake8-fixme
    "PGH003",  # Use specific rule codes when ignoring type issues
    "PLR0911", # Too many return statements
    "PLR0913", # Too many arguments in function definition
    "PLR0915", # Too many statements
    "PTH",     # flake8-use-pathlib
    "PYI034",  # `__aenter__` methods in classes like `{name}` usually return `self` at runtime
    "PYI036",  # The second argument in `__aexit__` should be annotated with `object` or `BaseException | None`
    "S102",    # Use of `exec` detected
    "S105",    # Possible hardcoded password assigned to
    "S106",    # Possible hardcoded password assigned to argument: "{name}"
    "S301",    # `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
    "S303",    # Use of insecure MD2, MD4, MD5, or SHA1 hash function
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TD002",   # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...
    "TRY003",  # Avoid specifying long messages outside the exception class

    # TODO: Remove this once the following issue is fixed
    # https://github.com/apify/apify-sdk-python/issues/150
    "SLF001", # Private member accessed: `{name}`
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Unused imports
]
"**/{scripts}/*" = [
    "D",       # Everything from the pydocstyle
    "INP001",  # File {filename} is part of an implicit namespace package, add an __init__.py
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "T20",     # flake8-print
]
"**/{tests}/*" = [
    "D",       # Everything from the pydocstyle
    "INP001",  # File {filename} is part of an implicit namespace package, add an __init__.py
    "PT011",   # `pytest.raises({ExceptionType})` is too broad, set the `match` parameter or use a more specific exception
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "S101",    # Use of assert detected
    "T20",     # flake8-print
    "TID252",  # Relative imports from parent modules are banned
    "TRY301",  # Abstract `raise` to an inner function
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.isort]
known-first-party = ["apify", "apify_client", "apify_shared", "crawlee"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.basedpyright]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 1200

[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy"]
files = ["scripts", "src", "tests"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ['scrapy', 'scrapy.*', 'sortedcollections', 'lazy_object_proxy']
ignore_missing_imports = true
