[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apify"
version = "3.0.5"
description = "Apify SDK for Python"
authors = [{ name = "Apify Technologies s.r.o.", email = "support@apify.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
keywords = [
    "apify",
    "sdk",
    "automation",
    "chrome",
    "crawlee",
    "crawler",
    "headless",
    "scraper",
    "scraping",
]
dependencies = [
    "apify-client>=2.3.0,<3.0.0",
    "apify-shared>=2.0.0,<3.0.0",
    "crawlee>=1.0.4,<2.0.0",
    "cachetools>=5.5.0",
    "cryptography>=42.0.0",
    "impit>=0.6.1",
    "lazy-object-proxy>=1.11.0",
    "more_itertools>=10.2.0",
    "typing-extensions>=4.1.0",
    "websockets>=14.0",
    "yarl>=1.18.0",
]

[project.optional-dependencies]
scrapy = ["scrapy>=2.11.0"]

[project.urls]
"Apify Homepage" = "https://apify.com"
"Changelog" = "https://docs.apify.com/sdk/python/docs/changelog"
"Discord" = "https://discord.com/invite/jyEM2PRvMU"
"Documentation" = "https://docs.apify.com/sdk/python/docs/overview/introduction"
"Homepage" = "https://docs.apify.com/sdk/python/"
"Issue Tracker" = "https://github.com/apify/apify-sdk-python/issues"
"Release Notes" = "https://docs.apify.com/sdk/python/docs/upgrading/upgrading-to-v2"
"Source Code" = "https://github.com/apify/apify-sdk-python"

[dependency-groups]
dev = [
    "build<2.0.0",
    "crawlee[parsel]",
    "dycw-pytest-only<3.0.0",
    "griffe",
    "mypy~=1.18.0",
    "pre-commit<5.0.0",
    "pydoc-markdown<5.0.0",
    "pytest-asyncio<2.0.0",
    "pytest-cov<8.0.0",
    "pytest-httpserver<2.0.0",
    "pytest-timeout<3.0.0",
    "pytest-xdist<4.0.0",
    "pytest<9.0.0",
    "ruff~=0.14.0",
    "setuptools", # setuptools are used by pytest but not explicitly required
    "types-cachetools<7.0.0",
    "uvicorn[standard]",
    "werkzeug<4.0.0", # Werkzeug is used by httpserver
]

[tool.hatch.build.targets.wheel]
packages = ["src/apify"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
include = ["src/**/*.py", "tests/**/*.py", "docs/**/*.py", "website/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",   # Dynamically typed expressions (typing.Any) are disallowed in {filename}
    "ASYNC109", # Async function definition with a `timeout` parameter
    "BLE001",   # Do not catch blind exception
    "C901",     # `{name}` is too complex
    "COM812",   # This rule may cause conflicts when used with the formatter
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D107",     # Missing docstring in `__init__`
    "D203",     # One blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D413",     # Missing blank line after last section
    "EM",       # flake8-errmsg
    "G004",     # Logging statement uses f-string
    "ISC001",   # This rule may cause conflicts when used with the formatter
    "FIX",      # flake8-fixme
    "PLR0911",  # Too many return statements
    "PLR0913",  # Too many arguments in function definition
    "PLR0915",  # Too many statements
    "PTH",      # flake8-use-pathlib
    "PYI034",   # `__aenter__` methods in classes like `{name}` usually return `self` at runtime
    "PYI036",   # The second argument in `__aexit__` should be annotated with `object` or `BaseException | None`
    "S102",     # Use of `exec` detected
    "S105",     # Possible hardcoded password assigned to
    "S106",     # Possible hardcoded password assigned to argument: "{name}"
    "S301",     # `pickle` and modules that wrap it can be unsafe when used to deserialize untrusted data, possible security issue
    "S303",     # Use of insecure MD2, MD4, MD5, or SHA1 hash function
    "S311",     # Standard pseudo-random generators are not suitable for cryptographic purposes
    "TD002",    # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...
    "TRY003",   # Avoid specifying long messages outside the exception class
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Unused imports
]
"**/{tests}/*" = [
    "D",       # Everything from the pydocstyle
    "INP001",  # File {filename} is part of an implicit namespace package, add an __init__.py
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "S101",    # Use of assert detected
    "SLF001",  # Private member accessed: `{name}`
    "T20",     # flake8-print
    "TRY301",  # Abstract `raise` to an inner function
    "TID252",  # Prefer absolute imports over relative imports from parent modules
]
"**/{tests}/{integration}/*" = [
    "PLC0415", # `import` should be at the top-level of a file
]
"**/{docs,website}/**" = [
    "D",       # Everything from the pydocstyle
    "INP001",  # File {filename} is part of an implicit namespace package, add an __init__.py
    "F841",    # Local variable {variable} is assigned to but never used
    "TRY301",  # Abstract `raise` to an inner function
    "PLR2004", # Magic value used in comparison, consider replacing `{value}` with a constant variable
    "PLW0603", # Using the global statement to update `{name}` is discouraged
]
"**/docs/**/scrapy_project/**/__main__.py" = [
    # Because of asyncioreactor.install() call.
    "E402", # Module level import not at top of file
]
"**/docs/**/scrapy_project/**" = [
    # Local imports are mixed up with the Apify SDK.
    "I001", # Import block is un-sorted or un-formatted
    # Class variables are common in Scrapy projects.
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    # Local imports in Scrapy project.
    "TID252", # Prefer absolute imports over relative imports from parent modules
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "crawlee.configuration.Configuration",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
known-local-folder = ["apify"]
known-first-party = ["apify_client", "apify_shared", "crawlee"]

[tool.ruff.lint.pylint]
max-branches = 18

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
timeout = 1200

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
files = ["src", "tests", "docs", "website"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
exclude = []

[[tool.mypy.overrides]]
module = [
    'bs4', # Documentation
    'httpx', # Documentation
    'lazy_object_proxy', # Untyped and stubs not available
    'playwright.*', # Documentation
    'scrapy.*', # Untyped and stubs not available
    'selenium.*', # Documentation
]
ignore_missing_imports = true

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["src", "tests", "docs", "website"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "assert_never()"]

[tool.ipdb]
context = 7
